[gd_scene format=3 uid="uid://history_popup"]

[ext_resource type="Script" path="res://Scripts/history_window.gd" id="1_history"]

[node name="HistoryWindow" type="PopupPanel"]
title = "Financial History"
size = Vector2i(500, 600)
visible = true
script = ExtResource("1_history")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 596.0
theme_override_constants/separation = 15

[node name="Header" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 24
text = "ðŸ“œ HISTORY LOG"
horizontal_alignment = 1

[node name="OverallLabel" type="Label" parent="VBoxContainer"]
unique_id_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Overall Performance: +0.0%"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HistoryVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_id_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="CloseBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "CLOSE"